--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 
-<body>
+<body >
     <!--INICIO navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <nav class="navbar navbar-light bg-light">
@@ -86,7 +86,7 @@
         </div>
     </div>
 -->
-<!-- talvez tenha q trocar id="app" por id="form"-->
+
 <div class="col-md-6">
 <h3 class="display-4"> contato</h3>
 <form  
@@ -103,12 +103,12 @@
   </p>
 
   <p>
-    <label for="name">Nome</label>
+    <label for="nome">Nome</label>
     <input
-      id="name"
-      v-model="name"
+      id="nome"
+      v-model="nome"
       type="text"
-      name="name"
+      name="nome"
     >
   </p>
 
@@ -190,7 +190,7 @@
         </div>
     </div>
     <!-- rodape-->
-    <div>
+   <div>
         <footer id="acessar">
             <div class=" text-center align-self-center">
                 <p class="mb-3"> <strong> Copyright @vilmar 2018.Todos os direitos reservados.</strong>
