--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/jquery.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/bootstrap.js"></script>
-    
+
     <link rel="stylesheet" type="text/css" href="css/style.css"><!-- estilos -->
     <link href="img/icon1.png" rel="shortcut icon" type="image/x-icon">
     <!--icone-->
@@ -17,10 +17,11 @@
     <meta charset="utf-8">
     <meta name="author" content="vilmar">
     <!-- fonte e icone-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+        integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 
-<body >
+<body>
     <!--INICIO navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <nav class="navbar navbar-light bg-light">
@@ -29,7 +30,8 @@
                 jipe clube
             </a>
         </nav>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
@@ -66,8 +68,21 @@
             <div class="col-md-6">
                 <h3 class="display-4"> que é Lorem Ipsum?</h3>
 
-                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo
+                utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
+                embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como
+                também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na
+                década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente
+                quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.Lorem Ipsum é
+                simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde
+                o século XVI, quando um impressor desconhecido pegou usssssma bandeja de tipos e os embaralhou para
+                fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos.Lorem Ipsum é
+                simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde
+                o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um
+                livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a
+                editoração eletrônica, permanecendo essencialmente inalterado.
             </div>
+
             <!--formulario-->
 
             <!--
@@ -87,125 +102,113 @@
     </div>
 -->
 
-<div class="col-md-6">
-<h3 class="display-4"> contato</h3>
-<form  
-  id="app"  
-  @submit="checkForm"
-  action="envia.php"
-  method="post"
-  novalidate="true">
-  <p v-if="errors.length">
-    <b>Por favor, corrija o(s) seguinte(s) erro(s):</b>
-    <ul>
-      <li v-for="error in errors">{{ error }}</li>
-    </ul>
-  </p>
+            <div class="col-md-6">
+                <h3 class="display-4"> contato</h3>
+                <form id="app" @submit="checkForm" action="envia.php" method="post" novalidate="true">
+                    <p v-if="errors.length">
+                        <b>Por favor, corrija o(s) seguinte(s) erro(s):</b>
+                        <ul>
+                            <li v-for="error in errors">{{ error }}</li>
+                        </ul>
+                    </p>
 
-  <p>
-    <label for="nome">Nome</label>
-    <input
-      id="nome"
-      v-model="nome"
-      type="text"
-      name="nome"
-    >
-  </p>
+                    <p>
+                        <label for="nome">Nome</label>
+                        <br>
+                        <input id="nome" v-model="nome" type="text" name="nome">
+                    </p>
 
-  <p>
-    <label for="email">Email</label>
-    <input
-      id="email"
-      v-model="email"
-      type="email"
-      name="email"
-    >
-  </p>
+                    <p>
+                        <label for="email">Email</label>
+                        <br>
+                        <input id="email" v-model="email" type="email" name="email">
+                    </p>
 
-  <p>
-    <label for="mensagem" >mensagem</label>    
-    <input      
-      id="mensagem"
-      v-model="mensagem"
-      type="text"
-      name="mensagem"
-    >
-  </p>
-
-  
-
- 
-  <p>
-    <input
-      type="submit"
-      value="Enviar"
-    >
-  </p>
-</form>
-</div>
+                    <p>
+                        <label for="mensagem">mensagem</label>
+                        <br>
+                        <textarea id="mensagem" v-model="mensagem" type="text" name="mensagem"></textarea>
+                    </p>
 
 
-    <!--LINHA DIVISORIA -->
-    <hr>
-    <!--ULTIMO CONTAINER  -->
-    <div class=" borda container-fluido ">
-        <div class="row">
-            <div class="col-md-4 ">
-                <article>
-                    <img src="img/art1.jpg" alt="campanhas publicitarias" class=" rounded mx-auto d-block">
-                    <div class="inner">
-                        <h4>Impressos, vts e lingles</h4>
-                        <p> se voce esta precisando de algum material em especifico, conte com profisionais. Eles farão toda campanha publicitaria. Vt,OUtdoor, folder, anuncio e muito mais para sua empresa no mais alto padrão de qualidade
 
-                        </p>
 
+                    <p>
+                        <input type="submit" value="Enviar">
+                    </p>
+                </form>
+            </div>
+
+
+            <!--LINHA DIVISORIA -->
+            <hr>
+            <!--ULTIMO CONTAINER  -->
+            <div class=" borda container-fluido ">
+                <div class="row">
+                    <div class="col-md-4 ">
+                        <article>
+                            <img src="img/art1.jpg" alt="campanhas publicitarias" class=" rounded mx-auto d-block">
+                            <div class="inner">
+                                <h4>Impressos, vts e lingles</h4>
+                                <p> se voce esta precisando de algum material em especifico, conte com profisionais.
+                                    Eles farão toda campanha publicitaria. Vt,OUtdoor, folder, anuncio e muito mais para
+                                    sua empresa no mais alto padrão de qualidade
+
+                                </p>
+
+                            </div>
+                        </article>
                     </div>
-                </article>
-            </div>
-            <div class="col-md-4">
-                <article>
+                    <div class="col-md-4">
+                        <article>
 
-                    <img src="img/art2.jpg" alt="marketing digital" class="rounded mx-auto d-block">
-                    <div class="inner">
-                        <h4>admistração de redes sociais</h4>
-                        <p> Como agencia de publicidade aplicamos estrategias nos meios digitais para que seu negocio seja visto por milhoes de usuarios . O Brasil é o 5° pais mais conectado do mundo.por esse motivo, o seu negocio não pode ficar de fora do mercado digital.
+                            <img src="img/art2.jpg" alt="marketing digital" class="rounded mx-auto d-block">
+                            <div class="inner">
+                                <h4>admistração de redes sociais</h4>
+                                <p> Como agencia de publicidade aplicamos estrategias nos meios digitais para que seu
+                                    negocio seja visto por milhoes de usuarios . O Brasil é o 5° pais mais conectado do
+                                    mundo.por esse motivo, o seu negocio não pode ficar de fora do mercado digital.
 
-                        </p>
+                                </p>
 
+                            </div>
+                        </article>
                     </div>
-                </article>
-            </div>
-            <div class="col-md-4">
-                <article>
-                    <img src="img/art3.jpeg" alt="Criação de sites" class=" rounded mx-auto d-block">
-                    <div class="inner">
-                        <h4>Sites administráveis</h4>
-                        <p> Agora voce pode administrar seu site quando e como quiser . E melhor ainda pois voce pode pagar por este serviço, pois desenvolvemos de varias formas.Seu site atualizado, com seus últimos produtos ,integração com redes sociais, agora é possivel.
+                    <div class="col-md-4">
+                        <article>
+                            <img src="img/art3.jpeg" alt="Criação de sites" class=" rounded mx-auto d-block">
+                            <div class="inner">
+                                <h4>Sites administráveis</h4>
+                                <p> Agora voce pode administrar seu site quando e como quiser . E melhor ainda pois voce
+                                    pode pagar por este serviço, pois desenvolvemos de varias formas.Seu site
+                                    atualizado, com seus últimos produtos ,integração com redes sociais, agora é
+                                    possivel.
 
-                        </p>
+                                </p>
 
+                            </div>
+                        </article>
                     </div>
-                </article>
+                </div>
             </div>
-        </div>
-    </div>
-    <!-- rodape-->
-   <div>
-        <footer id="acessar">
-            <div class=" text-center align-self-center">
-                <p class="mb-3"> <strong> Copyright @vilmar 2018.Todos os direitos reservados.</strong>
-                    <br>795 franscisco prado, sala 600
-                    <br>sao carlos
-                    <br> (123) 456-7890 <br>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-                    <a href="#"> <i class="fab fa-instagram fa-2x"></i> </a>
-                    <a href="#"> <i class="fa fa-envelope fa-2x"></i> </a><br>
-                </p>
+            <!-- rodape-->
+            <div>
+                <footer id="acessar">
+                    <div class=" text-center align-self-center">
+                        <p class="mb-3"> <strong> Copyright @vilmar 2018.Todos os direitos reservados.</strong>
+                            <br>795 franscisco prado, sala 600
+                            <br>sao carlos
+                            <br> (123) 456-7890 <br>
+                            <a href="https://www.facebook.com/" target="_blank"><i
+                                    class="fab fa-facebook fa-2x"></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                            <a href="#"> <i class="fab fa-instagram fa-2x"></i> </a>
+                            <a href="#"> <i class="fa fa-envelope fa-2x"></i> </a><br>
+                        </p>
+                    </div>
+                </footer>
             </div>
-        </footer>
-    </div>
-<script src="js/funcoes.js"></script>
+            <script src="js/funcoes.js"></script>
 </body>
 
 </html>
